deployments-clean/test-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: api
  namespace: test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-10T14:36:46+09:00"
      labels:
        app: api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: api-config
        - secretRef:
            name: api-secret
        image: imqav3.azurecr.io/api:1.4.0-rc.1.8
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data-volume
        - mountPath: /app/config/saml/
          name: config-volume
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data-volume
      - emptyDir: {}
        name: config-volume
