deployments-clean/test-imqa-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: imqa-api
  namespace: test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: imqa-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-10T14:36:47+09:00"
      labels:
        app: imqa-api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: api-config
        - secretRef:
            name: api-secret
        image: imqav3.azurecr.io/imqa-api:1.4.0-rc.1.4
        imagePullPolicy: Always
        name: imqa-api
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8085
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data-volume
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data-volume
