deployments-clean/test-imqa-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: imqa-web
  namespace: test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: imqa-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-10T14:36:47+09:00"
      labels:
        app: imqa-web
    spec:
      containers:
      - env:
        - name: SCOPE
          value: web
        image: imqav3.azurecr.io/imqa-web-frontend:1.4.0-rc.1.9
        imagePullPolicy: Always
        name: imqa-web
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
