deployments-clean/test-otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: otel-collector
  namespace: test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: otel-collector
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-09T16:00:10Z"
      labels:
        app: otel-collector
    spec:
      containers:
      - args:
        - --config=/etc/otel-collector-config.yaml
        - --copy-path=/var/tmp/collector-config.yaml
        image: imqav3.azurecr.io/otel-collector:1.4.0-rc.1.4
        imagePullPolicy: Always
        name: otel-collector
        ports:
        - containerPort: 4317
          protocol: TCP
        - containerPort: 4318
          protocol: TCP
        - containerPort: 2255
          protocol: TCP
        - containerPort: 14268
          protocol: TCP
        - containerPort: 8888
          protocol: TCP
        - containerPort: 8889
          protocol: TCP
        - containerPort: 55679
          protocol: TCP
        - containerPort: 13133
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/otel-collector-config.yaml
          name: otel-config
          subPath: otel-collector-config.yaml
        - mountPath: /etc/manager-config.yaml
          name: otel-opamp
          subPath: manager-config.yaml
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: otel-collector-config
        name: otel-config
      - configMap:
          defaultMode: 420
          name: otel-collector-opamp-config
        name: otel-opamp
