deployments-clean/test-otel-collector-symbolicator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: otel-collector-symbolicator
    k8slens-edit-resource-version: v1
  name: otel-collector-symbolicator
  namespace: test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: otel-collector-symbolicator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-14T18:33:23+09:00"
      labels:
        app: otel-collector-symbolicator
    spec:
      containers:
      - args:
        - --config=/etc/otel-collector-symbolicator-config.yaml
        image: imqav3.azurecr.io/otel-collector-symbolicator:1.4.0-rc.1.4
        imagePullPolicy: Always
        name: otel-collector-symbolicator
        ports:
        - containerPort: 4319
          name: otlp-http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/otel-collector-symbolicator-config.yaml
          name: config-volume
          subPath: otel-collector-symbolicator-config.yaml
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: otel-collector-symbolicator-config
        name: config-volume
