deployments-clean/test-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    k8slens-edit-resource-version: v1
  name: api
  namespace: test
spec:
  - IPv4
  ports:
  - nodePort: 30333
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: api
  sessionAffinity: None
  type: NodePort
