deployments-clean/test-imqa-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: imqa-api
  name: imqa-api
  namespace: test
spec:
  - IPv4
  ports:
  - name: public
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: private
    port: 8085
    protocol: TCP
    targetPort: 8085
  selector:
    app: imqa-api
  sessionAffinity: None
  type: ClusterIP
