deployments-clean/test-imqa-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: imqa-web
  namespace: test
spec:
  - IPv4
  ports:
  - nodePort: 31300
    port: 3301
    protocol: TCP
    targetPort: 3000
  selector:
    app: imqa-web
  sessionAffinity: None
  type: NodePort
