deployments-clean/test-otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: otel-collector
  namespace: test
spec:
  - IPv4
  ports:
  - name: grpc
    nodePort: 30728
    port: 4317
    protocol: TCP
    targetPort: 4317
  - name: http
    nodePort: 30407
    port: 4318
    protocol: TCP
    targetPort: 4318
  - name: metrics-internal
    nodePort: 31977
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: spanmetrics
    nodePort: 32220
    port: 8889
    protocol: TCP
    targetPort: 8889
  - name: zipkin-thrift
    nodePort: 31274
    port: 14268
    protocol: TCP
    targetPort: 14268
  - name: custom
    nodePort: 30907
    port: 2255
    protocol: TCP
    targetPort: 2255
  - name: zpages
    nodePort: 30954
    port: 55679
    protocol: TCP
    targetPort: 55679
  - name: health-check
    nodePort: 31266
    port: 13133
    protocol: TCP
    targetPort: 13133
  selector:
    app: otel-collector
  sessionAffinity: None
  type: NodePort
