deployments-clean/test-otel-collector-symbolicator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: otel-collector-symbolicator
    k8slens-edit-resource-version: v1
  name: otel-collector-symbolicator
  namespace: test
spec:
  - IPv4
  ports:
  - name: otlp-http
    nodePort: 32257
    port: 4319
    protocol: TCP
    targetPort: 4319
  selector:
    app: otel-collector-symbolicator
  sessionAffinity: None
  type: NodePort
